# --------------------------------------------------------------------------
# JL yuvutils, some utilities for processing YUV4MPEG streams
# Copyright 2005 Johannes Lehtinen
# --------------------------------------------------------------------------
#
# Process this file with automake to produce a real makefile.

AM_CFLAGS = -Wall -Wmissing-prototypes -pedantic
AM_CPPFLAGS = -DNDEBUG

bin_PROGRAMS = yuvinfo yuvadjust yuvresample

yuvinfo_SOURCES = yuvinfo.c
yuvadjust_SOURCES = yuvadjust.c
yuvresample_SOURCES = yuvresample.c
